<resources>
    <string name="app_name">Bit Network</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="full_name">Full Name</string>
    <string name="create_an_account">Create an account</string>
    <string name="register">Register</string>
    <string name="already_registered_login_here">Already Registered? Login here</string>
    <string name="textview">TextView</string>
    <string name="authenticator_app">Authenticator App</string>
    <string name="login">Login</string>
    <string name="new_here_create_account">New here? Create account</string>
    <string name="log_out">LOG OUT</string>
    <string name="create_new_account">Create New Account</string>
    <string name="log_in">Log in</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="send_password_reset_link">SEND PASSWORD RESET LINK</string>
    <string name="club_enrolled">Club Enrolled</string>
    <string name="logout">Logout</string>
    <string name="user_s_profile">User\'s Profile</string>
    <string name="upload">Upload</string>
    <string name="choose">Choose</string>
    <string name="phone">Phone</string>
    <string name="select_photo">Select Photo</string>
    <string name="image_link">Image_Link</string>
    <string name="new_name">New name</string>
    <string name="new_email">New_email</string>
    <string name="new_password">New_password</string>
    <string name="new_phone">New_phone</string>
    <string name="new_mobile_no">New_mobile_no.</string>
    <string name="new_branch">New_branch</string>
    <string name="new_club_enrolled">New_club_enrolled</string>
    <string name="new_club_enrolled_in">New_club_enrolled_in</string>
    <string name="new_batch">New_batch</string>
    <string name="update">UPDATE</string>
    <string name="list_of_users">List Of Users</string>
    <string name="list_item">List Item</string>
    <string name="name_of_holder">Name of holder</string>
    <string name="sign_out">Sign Out</string>
    <string name="account_holder_name">Account Holder Name</string>
    <string name="branch">Branch</string>
    <string name="New_name">New_name</string>
    <string name="profile">Profile</string>
    <string name="update_info">Update_Info</string>
    <string name="user_profile">User_Profile</string>
    <string name="update_details">Update_details</string>
    <string name="search">Search</string>
    <string name="signout">Signout</string>
    <string name="alumuni_network">Alumuni Network</string>
    <string name="startup_network">Startup Network</string>
    <string name="teaching_faculty">Teaching Faculty</string>
    <string name="non_teaching_staffs">Non Teaching Staffs</string>
    <string name="non_teacing_faculty">Non Teacing Faculty</string>
    <string name="home">Home</string>
    <string name="navigation_drawer">Navigation Drawer</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="all_in_one">All In One</string>
    <string name="seniors_network">Seniors Network</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_profile">My Profile</string>
    <string name="stream">Stream :</string>
    <string name="exit">EXIT</string>
    <string name="user">USER</string>
    <string name="seniors">Seniors</string>
    <string name="non_teachers">Non_Teachers</string>
    <string name="teachers">Teachers</string>
    <string name="startup">Startup</string>
    <string name="alumuni">Alumuni</string>
    <string name="name">Name</string>
    <string name="date_of_birth">Date_Of_Birth</string>
    <string name="year_of_passing">Year_Of_Passing</string>
    <string name="mobile_whatsapp">Mobile(Whatsapp)</string>
    <string name="month">Month</string>
    <string name="day">Day</string>
    <string name="year">Year</string>
    <string name="address">Address</string>
    <string name="address_street_address_and_poastal_code">Address(street address and Poastal code)</string>
    <string name="country">Country</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="where_did_life_take_you_after_scg">Where did life take you after SCG</string>
    <string name="fondest_memories_of_life_sgc">Fondest Memories of Life @SGC</string>
    <string name="upload_photo">Upload_Photo</string>
    <string name="fill_details">Fill_Details</string>
    <string name="address_street_address">Address(street address)</string>
    <string name="postal_zip_code">Postal/Zip Code</string>
    <string name="buisness_address">Business Address</string>
    <string name="source_of_inspiration">Source Of Inspiration</string>
    <string name="about_startup">About Startup</string>
    <string name="startup_name">Startup Name and Field</string>
    <string name="startupNameOnly">Startup Name</string>
    <string name="logo_of_startup">Logo Of Startup</string>
    <string name="subject">Subject</string>
    <string name="subject_specialised_in">Subject Specialised In</string>
    <string name="holding_position_if_any">Holding Position(if any)</string>
    <string name="qualification">Qualification</string>
    <string name="highest_qualification">Highest Qualification</string>
    <string name="position_holding">Position Holding</string>
    <string name="home_address">Home Address</string>
    <string name="field_of_interest">Field_Of_Interest</string>
    <string name="no_need_to_update">No need to update!!!</string>
    <string name="startup_profile">Startup Profile</string>
    <string name="teacher_s_profile">Teacher\'s Profile</string>
    <string name="non_teacher_s_profile">Non Teacher\'s Profile</string>
    <string name="seniors_profile">Seniors Profile</string>
    <string name="contact_detail">Contact Detail</string>
    <string name="team_s_head_name">Team\'s head name</string>
    <string name="alumuni_profile">Alumuni Profile</string>
    <string name="startup_member">Startup Member</string>
    <string name="alumuni_member">Alumuni Member</string>
    <string name="teachers_s_profile">Teachers\'s Profile</string>
    <string name="senior_s_profile">Senior\'s Profile</string>
    <string name="alumuni_member_s_profile">Alumuni Member\'s Profile</string>
    <string name="startup_member_s_profile">Startup Member\'s Profile</string>
    <string name="date_of_birth_dd_mm_yyyy">Date_Of_Birth(dd-mm-yyyy)</string>
    <string name="choose_stream">Choose_Stream:</string>
    <string name="holder_s_name">Holder\'s Name</string>
    <string name="contact_details">Contact_Details</string>
    <string name="batch">Batch</string>
    <string name="complete_address">Complete_Address</string>
    <string name="success_story">Success Story</string>
    <string name="fondest_memories">Fondest_Memories</string>
    <string name="profession">Profession</string>
    <string name="teaching_subject">Teaching_Subject</string>
    <string name="enter_details">Enter Details</string>
    <string name="ok">OK</string>
    <string name="d_o_b">D.O.B</string>
    <string name="ccp">CCP</string>
    <string name="mobile">Mobile</string>
    <string name="dob">dob</string>
    <string name="contact">Contact</string>
    <string name="field">Field</string>
    <string name="hobbies">Hobbies</string>
    <string name="interest">Interest</string>
    <string name="alumuni_of">Alumuni Of The Year</string>
    <string name="field_of_startup">Field Of  Startup</string>
    <string name="owner_s_info">Owner\'s Info</string>
    <string name="about">About</string>
</resources>
