<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
<group
    android:checkableBehavior="single">
    <item
        android:id="@+id/alumuni"
        android:title="@string/alumuni_network"
        android:icon="@drawable/ic_alumuni_network"/>
    <item
        android:id="@+id/startup"
        android:title="@string/startup_network"
        android:icon="@drawable/ic_startup_network"/>
    <item
        android:id="@+id/teachers"
        android:title="@string/teaching_faculty"
        android:icon="@drawable/ic_teaching_faculty" />
    <item
        android:id="@+id/nonTeachers"
        android:title="@string/non_teacing_faculty"
        android:icon="@drawable/ic_non_teaching_faculty"/>
    <item
        android:id="@+id/seniors"
        android:title="@string/seniors_network"
        android:icon="@drawable/ic_senior"/>

    <item
        android:id="@+id/profile"
        android:title="@string/my_profile"
        android:icon="@drawable/ic_profile"/>
    <item
        android:id="@+id/signOut"
        android:title="@string/sign_out"
        android:icon="@drawable/ic_sign_out"/>
</group>
</menu>